# Flow

./: .gitignore  .gitmodules  README.md  bun.lockb  collab.html  index.html  notch.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  quick-append.html  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build-macos.yml  deploy-web.yml  ios-build.yml  main.yml
landing/: index.html  package-lock.json  package.json  vite.config.ts
landing/public/: CNAME
landing/src/: App.tsx  main.tsx  style.css
scripts/: seed-notes.mjs
server/: package-lock.json  package.json  tsconfig.json  wrangler.toml
server/src/: index.ts  room.ts  types.ts
src/: App.jsx  main.ts  platform.ts  style.css  types.ts  updater.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  search.rs
src/claude/: claude-button.ts  claude-link-modal.ts
src/collab/: collab-store.ts  collab-style.css  identity.ts  main.ts  share-modal.ts  ws-provider.ts
src/components/: AddTask.jsx  Column.jsx  DoneTaskCard.jsx  EditList.jsx  Flow.jsx  List.jsx  Navbar.jsx  TaskCard.jsx
src/context/: ListContext.jsx
src/editor/: editor-container.ts  setup.ts
src/export/: export-modal.ts
src/import/: import-modal.ts
src/mobile/: mobile-app.ts  mobile.css
src/mode-switch/: mode-switch.ts
src/notch/: notch-main.ts  notch-style.css
src/pages/: index.js
src/platform/: persistence-tauri.ts  platform.ts  (+1 more)
themes/: dark.json  discordish.json  light.json
(+40 files in other folders)
