[package]
name = "flow"
version = "0.1.0"
description = "A note-taking app powered by BlockSuite"
authors = []
edition = "2021"

[lib]
name = "flow_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
