[package]
name = "peak"
version = "0.1.0"
description = "A note-taking app powered by BlockSuite"
authors = []
edition = "2021"

[lib]
name = "peak_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
raw-window-handle = "0.6"
yrs = "0.21"
